--- a/app/src/main/res/layout/buy_inputs_thank_you.xml
+++ b/app/src/main/res/layout/buy_inputs_thank_you.xml
@@ -16,7 +16,7 @@
         android:paddingStart="20dp"
         android:paddingTop="20dp"
         android:paddingEnd="20dp"
-        android:paddingBottom="10dp">
+        android:paddingBottom="@dimen/dimen_20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:background="@color/transparent"
-                    android:text="Start Shopping"
+                    android:text="Continue Shopping"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/button_text_size"
@@ -105,25 +105,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline48" />
 
-            <TextView
-                android:id="@+id/estimated_delivery_date"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:gravity="center"
-                android:text="Apr 30, 2020"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="19sp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline49"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline50" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:text="ESTIMATED DELIVERY"
+                android:text="ORDER AWAITING APPROVAL"
                 android:textColor="@color/colorPrimary"
                 android:textSize="22sp"
                 android:textStyle="bold"
