--- a/app/src/main/res/layout/demo_product_description.xml
+++ b/app/src/main/res/layout/demo_product_description.xml
@@ -1,125 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="@color/white"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_margin="10dp"
+    android:orientation="vertical"
+    android:background="@color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/like_share_layout"
+            android:layout_marginTop="16dp"
+            android:layout_alignParentEnd="true"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:background="@color/transparent"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:elevation="1dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/product_share_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@android:color/transparent"
+                android:layout_margin="6dp"
+                android:src="@drawable/ic_share"
+                custom:ignore="VectorDrawableCompat" />
+
+            <ToggleButton
+                android:layout_margin="6dp"
+                android:id="@+id/product_like_btn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+
+                android:background="@drawable/ic_favorite"
+                android:textOff=""
+                android:textOn="" />
+
+        </LinearLayout>
+        <com.daimajia.slider.library.SliderLayout
+            android:id="@+id/product_cover_slider"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/white"
+            custom:auto_cycle="true"
+            custom:indicator_visibility="visible"
+            app:layout_constraintTop_toBottomOf="@id/like_share_layout"/>
+
+        <com.daimajia.slider.library.Indicators.PagerIndicator
+            android:id="@+id/product_slider_indicator"
+            style="@style/AndroidImageSlider_Indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/product_cover_slider"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:paddingBottom="20dp"
+            app:selected_color="@color/colorPrimary"
+            app:unselected_color="@color/layoutBackground"
+            app:layout_constraintTop_toBottomOf="@id/product_cover_slider"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_weights"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView19"
+            android:id="@+id/weight1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="1Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView18"
+            app:layout_constraintEnd_toStartOf="@+id/weight2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/weight2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="2Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView20"
+            app:layout_constraintEnd_toStartOf="@+id/weight3"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView19"
+            app:layout_constraintStart_toEndOf="@+id/weight1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView20"
+            android:id="@+id/weight3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="3Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView21"
+            app:layout_constraintEnd_toStartOf="@+id/weight4"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView18"
+            app:layout_constraintStart_toEndOf="@+id/weight2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView21"
+            android:id="@+id/weight4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="4Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView22"
+            app:layout_constraintEnd_toStartOf="@+id/weight5"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView20"
+            app:layout_constraintStart_toEndOf="@+id/weight3"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/weight5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="5Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView23"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView21"
+            app:layout_constraintStart_toEndOf="@+id/weight4"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView23"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="6Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView24"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView22"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/weight5"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/textView24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/crop_card_button_green"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="2dp"
+            android:background="@drawable/rounded_rectangle_mild_gray_background"
             android:text="7Kg"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="#6E7989"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textView23"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -128,10 +235,11 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/product_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dimen_10dp"
-            android:text="Weedmaster"
+            android:layout_margin="15dp"
+            android:text="@string/product_title"
             android:textSize="27sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -144,13 +252,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_10dp">
+        android:layout_margin="15dp">
 
         <TextView
             android:id="@+id/textView25"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:text="Price : "
             android:textColor="@color/colorPrimary"
             android:textSize="22sp"
@@ -161,10 +269,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView26"
+            android:id="@+id/product_price_new"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:text="UGX 30.00"
             android:textColor="@color/colorPrimary"
             android:textSize="22sp"
@@ -175,15 +283,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/product_price_old"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="UGX 45.00"
+            android:gravity="center_vertical"
+            android:text="@string/default_old_price"
             android:textSize="22sp"
             android:textStyle="bold"
+            android:textColor="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView26"
+            app:layout_constraintStart_toEndOf="@+id/product_price_new"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -191,14 +301,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.333333333" />
+            app:layout_constraintGuide_percent="0.21" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline56"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.666666667" />
+            app:layout_constraintGuide_percent="0.61" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -206,7 +316,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_10dp">
-
+        <RatingBar
+            android:id="@+id/product_rating_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="1.5"
+            android:scaleX=".7"
+            android:scaleY=".7"
+            android:theme="@style/RatingBar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline57"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
@@ -214,7 +336,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline57"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -251,7 +374,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout"
+            app:layout_constraintStart_toEndOf="@+id/product_rating_bar"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
@@ -295,7 +418,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
@@ -305,22 +428,17 @@
             android:text="Product Description"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="#515C6F"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <WebView
+            android:id="@+id/product_description_webView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dimen_10dp"
-            android:text="@string/lorem_ipsum"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="5dp" />
 
     </LinearLayout>
 
@@ -362,9 +480,10 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_10dp"
-        android:background="@drawable/rounded_corners_button"
-        android:backgroundTint="#535353"
+        android:layout_marginTop="@dimen/dimen_5dp"
+        android:layout_marginStart="@dimen/dimen_10dp"
+        android:layout_marginEnd="@dimen/dimen_10dp"
+        android:background="@drawable/round_corners_button_darkgray"
         android:maxHeight="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -395,3 +514,4 @@
     </FrameLayout>
 
 </LinearLayout>
+</ScrollView>
