added subtotal implementation

--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -219,7 +219,8 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:gravity="center_vertical"
-                            android:padding="5dp" >
+                            android:padding="5dp"
+                            android:visibility="gone">
 
                             <TextView
                                 android:layout_width="wrap_content"
