--- a/app/src/main/res/layout/buy_inputs_thank_you.xml
+++ b/app/src/main/res/layout/buy_inputs_thank_you.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layoutBackgroundLight"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
+        android:layout_marginTop="?actionBarSize"
+        android:layout_marginBottom="?actionBarSize"
         android:background="@color/white"
         android:orientation="vertical"
         android:paddingStart="20dp"
