--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,7 +61,7 @@
     <color name="textColorSecondaryLight">#666666</color>
 
     <color name="windowBackground">#FFFFFF</color>
-    <color name="windowBackgroundDark">#FAF9F9</color>
+    <color name="windowBackgroundDark">#F9F9F9</color>
     <color name="windowBackgroundLight">#f2f2f2</color>
 
     <color name="layoutBackground">#d9d9d9</color>
