modified order details layout

--- a/app/src/main/res/layout/buy_inputs_order_details.xml
+++ b/app/src/main/res/layout/buy_inputs_order_details.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     android:clickable="true"
     android:focusable="true"
-    android:background="@color/layoutBackgroundLight">
+    android:background="@color/layoutBackgroundLight"
+    android:paddingTop="?actionBarSize"
+    android:paddingBottom="?actionBarSize">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -264,7 +266,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -534,7 +537,8 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:gravity="center_vertical"
-                            android:layout_marginTop="3dp" >
+                            android:layout_marginTop="3dp"
+                            android:visibility="gone">
 
                             <TextView
                                 android:layout_width="wrap_content"
