--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -132,12 +132,14 @@
 
                         <TextView
                             android:id="@+id/txt_user_address"
-                            android:layout_width="151dp"
+                            android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:layout_marginStart="@dimen/dimen_10dp"
                             android:layout_marginEnd="@dimen/dimen_10dp"
+                            android:ellipsize="end"
                             android:fontFamily="@font/josefin_sans"
                             android:gravity="center|start"
+                            android:maxLines="2"
                             android:text="Nakibinge, Rd, Kampala, Uganda"
                             android:textColor="@android:color/white"
                             android:textSize="16sp"
