--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -264,7 +264,7 @@
                                 android:textColor="#333333"  />
 
                             <TextView
-                                android:id="@+id/checkout_shipping"
+                                android:id="@+id/checkout_shipping_charge"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
