added implementation for add cart product under product description

--- a/app/src/main/res/layout/buy_inputs_product_description.xml
+++ b/app/src/main/res/layout/buy_inputs_product_description.xml
@@ -4,7 +4,7 @@
     xmlns:custom="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
+    android:layout_marginBottom="?actionBarSize"
     android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
@@ -223,7 +223,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="@dimen/dimen_20dp"
-                            android:text="2"
+                            android:text="1"
                             android:textSize="26sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
